# nothingness

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  main.cpp  main.h
main/resources/: resources.json
main/resources/scripts/: t.lua
nothingness/: CMakeLists.txt  platform.h
nothingness/include/nothingness/: error_handler.h  logger.h  luaScriptEngine.h  nothingness.h
nothingness/include/nothingness/network/: network.h
nothingness/src/: .gitignore
nothingness/src/error_handler/: error_handler.cpp  error_handler.h
nothingness/src/logger/: CMakeLists.txt  logger.cpp  logger.h
nothingness/src/luaScriptEngine/: CMakeLists.txt  luaScriptEngine.cpp  luaScriptEngine.h
nothingness/src/network/: CMakeLists.txt  network.cpp  network.h
nothingness/src/network/src/SSL_Context/: SSL_Context.cpp  SSL_Context.h
nothingness/src/network/src/SSL_Context_Client/: SSL_Context_Client.cpp  SSL_Context_Client.h
nothingness/src/network/src/SSL_Context_Server/: SSL_Context_Server.cpp  SSL_Context_Server.h
nothingness/src/network/src/SSL_Socket/: SSL_Socket.cpp  SSL_Socket.h
nothingness/src/network/src/Socket/: Socket.cpp  Socket.h
nothingness/src/network/src/TCP_Socket/: TCP_Socket.cpp  TCP_Socket.h
nothingness/src/nothingness/: CMakeLists.txt  nothingness.cpp  nothingness.h
nothingness/src/resource_manager/: resouce_manager.cpp  resource_manager.h
